# childrens-speech-recognition-runtime

./: .env  .gitignore  CHANGELOG.md
notebooks/: train_word_transcripts_eda.ipynb
notebooks/statisitcs/: eda_age_distribution.csv  eda_child_stats.csv  eda_outlier_candidates.csv  eda_session_stats.csv  eda_top_bigrams.csv  eda_top_tokens.csv
runtime/: pyproject.toml
statisitcs/: labelStats  labelStats_extended.py
statisitcs/plots/: summary.json
statisitcs/plots_extended/: extended_summary.json  top_content_words.tsv
